--- a/public/css/global.css
+++ b/public/css/global.css
@@ -6,3 +6,10 @@
     padding-top: 10px;
     padding-bottom: 10px;
 }
+
+.btn-sair-sistema {
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translate(-10%, -50%);
+}
