--- a/public/css/global.css
+++ b/public/css/global.css
@@ -13,3 +13,13 @@
     right: 0;
     transform: translate(-10%, -50%);
 }
+
+.flex-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.bordered {
+    border: 1px solid #6c757d;
+}
