--- a/public/css/global.css
+++ b/public/css/global.css
@@ -7,13 +7,6 @@
     padding-bottom: 10px;
 }
 
-.btn-sair-sistema {
-    position: absolute;
-    top: 50%;
-    right: 0;
-    transform: translate(-10%, -50%);
-}
-
 .flex-center {
     display: flex;
     justify-content: center;
@@ -22,4 +15,16 @@
 
 .bordered {
     border: 1px solid #6c757d;
+}
+
+.top-0 {
+    top: 0;
+}
+
+.right-0 {
+    right: 0;
+}
+
+.space-around {
+    justify-content: space-around;
 }
