--- a/public/css/listing.css
+++ b/public/css/listing.css
@@ -2,3 +2,12 @@
     color: white;
     text-transform: uppercase;
 }
+
+.no-style {
+    list-style: none;
+}
+
+.lista-contatos {
+    margin: 0;
+    padding: 0;
+}
